--- a/resources/shaders.qrc
+++ b/resources/shaders.qrc
@@ -23,5 +23,6 @@
         <file>md5anim.schema</file>
         <file>fatty.mtr</file>
         <file>fatty.md5mesh</file>
+        <file>keycardgetup.md5anim</file>
     </qresource>
 </RCC>
